Fixes argument if statement for setgyrodata rate * Fixes library.properties which had an zero instead of an "O" (Oh)

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
-name=SparkFun Qwiic 6Dof - LSM6DS0 
+name=SparkFun Qwiic 6Dof - LSM6DSO 
 version=1.0.2
 author=SparkFun Electronics 
 maintainer=SparkFun Electronics <sparkfun.com>
-sentence=A library to drive the STmicro LSM6DS0 by SPI or I2C.
+sentence=A library to drive the STmicro LSM6DSO by SPI or I2C.
 paragraph=
 category=Sensors
 url=https://github.com/sparkfun/SparkFun_Qwiic_6DoF_LSM6DS0_Arduino_Library
